# winaddr2line

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build-release.yml
.idx/: dev.nix
include/: DbgHelpManager.hpp
src/: DbgHelpManager.cpp  main.cpp
test/: test.py  test_data.json
testing_binary/: CMakeLists.txt
testing_binary/src/: testApp.cpp
